<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/settings_layout"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settings_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:text="@string/settings_head"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:id="@+id/radio_group_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/back"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/theme_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/theme_head"
            android:layout_margin="@dimen/default_margin"
            android:textSize="25sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin">

                <RadioButton
                    android:id="@+id/radio_button_light_theme"
                    android:text="@string/theme_light"
                    style="@style/settings_radio_button" />

                <RadioButton
                    android:id="@+id/radio_button_dark_theme"
                    android:text="@string/theme_dark"
                    style="@style/settings_radio_button" />
            </RadioGroup>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/return_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:text="@string/return_btn"
        android:textSize="20sp"
        app:cornerRadius="@dimen/button_corner_radius"/>
</GridLayout>